# python-dgus

./: .coveragerc  .gitignore  .pylintrc  Readme.md  main.py  overview_display_mask.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pylint.yml  pylint_new.yml  python_push.yml
dgus/: config_sanity_check.py  icl_helper.py
dgus/display/: data_helper.py  debug_helper.py  dgus_logger.py  display.py  mask.py  onscreen_keyboard.py
dgus/display/communication/: communication_interface.py  dgus_cmd.py  protocol.py  request.py
dgus/display/controls/: control.py  data_variable.py  text_variable.py
dgus/display/serialization/: json_serializable.py
doc/: Readme.md
doc/source/: conf.py  modules.rst
sample/: main.py  overview_display_mask.py
sample/communication/: communication_example.py
tests/: test_communication_interface.py  test_control.py  test_data_variable.py  test_mask.py  test_protocol.py  test_text_variable.py
tests/controls/: call_monitoring_control.py
