[metadata]
name = libdgus
license = GPLv3
maintainer = seho85
home-page = https://github.com/seho85/python-dgus
project-urls =
    Bug Tracker = https://github.com/seho85/python-dgus/issues
long_description = file: Readme.md
long_description_content_type=text/markdown

[options]
#package_dir= 
#    =src
packages = dgus
install_requires =
    pyserial